...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="user_first_name"
                android:inputType="textEmailAddress"
                android:background="@null"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="user last_name"
                android:inputType="textEmailAddress"
                android:background="@null"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="user email"
                android:inputType="textEmailAddress"
                android:background="@null"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:clickable="true"
                android:focusable="false"
                android:hint="user birthday"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextUserProfileMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="user mobile"
                android:inputType="phone"
                android:background="@null"
...
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.864" />

    </LinearLayout>

    <Button
        android:id="@+id/saveChangesUserProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darker_teal"
        android:text="Save Changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
