...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="facility name"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="facility email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="facility mobile"
                android:inputType="phone"
                android:paddingLeft="16dp"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <EditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="facility location"
                android:inputType="text"
                android:paddingLeft="16dp"
...
                android:paddingBottom="10dp" />
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
