...
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_entrant_profile"
        android:title="User Profile" />

    <item
        android:id="@+id/navigation_organizer_profile"
        android:title="Facility Profile" />
</menu>
